# books-sdk

./: CMakeLists.txt  GoogleBooksService.cpp  GoogleBooksService.h  README.md  main.cpp  my-toolchain.cmake
include/: Book.h  CurlHttpRequest.h  GoogleBooksService.h  IBookService.h  IHttpRequest.h
src/: Book.cpp  CurlHttpRequest.cpp  GoogleBooksService.cpp
src/android/: AndroidLogging.h  AndroidStorageHelper.cpp  AndroidStorageHelper.h
src/jni/: GoogleBooks_JNI.cpp
tests/: CMakeLists.txt  GoogleBooksServiceTests.cpp  test_GoogleBooksService.cpp
